# fraude-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  deploy.py  docker-compose.yml  main.py  mlflow.db  pyproject.toml  train_and_log.py
.github/workflows/: ci.yml
docs/: GUIA_TECNICA.md
notebooks/: 00_indice_curso.ipynb  01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb  04_prefect_flow.ipynb  05_mlflow_prefect_entorno.ipynb  06_api_inferencia.ipynb
scripts/: build_notebooks.py  export_model.py
src/healthcare_fraud/: config.py
src/healthcare_fraud/api/: __init__.py  constants.py  dependencies.py  handlers.py  main.py  middleware.py  openapi_metadata.py  routes.py  schemas.py
src/healthcare_fraud/data/: __init__.py  clean.py  load.py  validate.py
src/healthcare_fraud/features/: __init__.py  build.py  preprocess.py
src/healthcare_fraud/models/: __init__.py  evaluate.py  predict.py  registry.py  train.py
src/healthcare_fraud/monitoring/: __init__.py  drift.py  logger.py
src/healthcare_fraud/pipelines/: __init__.py  training_flow.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_data.py  test_features.py  test_load.py  test_models.py  test_monitoring.py  test_train.py
