[project]
name = "fraude-mlops"
version = "0.1.0"
description = "MLOps para detección de fraude en reclamaciones de salud"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.135.0",
    "kaggle>=1.6.0",
    "matplotlib>=3.10.0",
    "mlflow>=3.2.0",
    "numpy>=2.0.0",
    "optuna>=4.4.0",
    "pandas>=2.2.0",
    "prefect>=3.4.12",
    "pyarrow>=16.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.1.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.0",
    "shap>=0.46.0",
    "uvicorn[standard]>=0.32.0",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
